--- a/index.html
+++ b/index.html
@@ -9,9 +9,14 @@
 		<div class="about">
 		<h2>About</h2>
 		<p>We are a MLG Rocket League team. We suck, watch our twitch over to the right.</p>
+		<h2>Members</h2>
+		<h3>Leader: Matthew Harames</h3>
+		<h3>Team Captain: Jonah Larsen</h3>
+		<h3>Team Member: Ryan Smith</h3>
+		<h3>Team Member: Caleb Mortensen</h3>
 		</div>
 		<div class="twitch">
-		<iframe src="http://player.twitch.tv/?channel=dexez1" frameborder="0" scrolling="no" height="378" width="620"></iframe><a href="http://www.twitch.tv/dexez1?tt_medium=live_embed&tt_content=text_link" style="padding:2px 0px 4px; display:block; width:345px; font-weight:normal; font-size:10px;text-decoration:underline;">Watch live video from Dexez1 on www.twitch.tv</a>
+		<iframe class="twetch" src="http://player.twitch.tv/?channel=dexez1" frameborder="0" scrolling="no" height="378" width="620"></iframe><a class="twetch" href="http://www.twitch.tv/dexez1?tt_medium=live_embed&tt_content=text_link" style="padding:2px 0px 4px; display:block; width:345px; font-weight:normal; font-size:10px;text-decoration:underline;">Watch live video from Dexez1 on www.twitch.tv</a>
 		</div>
 	</body>
 </html>
